@@ -1094,6 +1094,13 @@ Example  : pray "lower law"\n\r\
 This prayer divinely reveals the moral, non-divine, "lower" law active in the \
 area occupied by the caster.
 
+PRAYER_LIGHTHAMMER=PRAYER_HAMMER_OF_LIGHT
+PRAYER_HAMMER_LIGHT=PRAYER_HAMMER_OF_LIGHT
+PRAYER_HAMMER_OF_LIGHT=<ABILITY>\
+Usage    : PRAY "HAMMER OF LIGHT" [TARGET NAME]\n\r\
+Example  : pray "hammer of light: orc\n\r\
+Causes the caster's deity to hit evil creatures with a holy hammer of light, damaging them.
+
 PRAYER_MALADICTION=<ABILITY>\
 Usage    : PRAY "MALADICTION" [TARGET NAME] \n\r\
 Example  : pray "maladiction" bob\n\r\
@@ -1437,6 +1444,16 @@ Example  : pray "resurrect" body\n\r\
 By targeting the cold dead body of a compatriot, the caster can resurrect them.  Only works \
 on players.
 
+RESSURECT_MOUNT=PRAYER_RESURRECT_MOUNT
+RESSURRECT_MOUNT=PRAYER_RESURRECT_MOUNT
+RESURECT_MOUNT=PRAYER_RESURRECT_MOUNT
+PRAYER_RESURRECTMOUNT=PRAYER_RESURRECT_MOUNT
+RESURRECT_MOUNT=PRAYER_RESURRECT_MOUNT
+PRAYER_RESURRECT_MOUNT=<ABILITY>\
+Usage    : PRAY "RESURRECT MOUNT" [TARGET NAME]\n\r\
+Example  : pray "resurrect mount" body\n\r\
+By targeting the cold dead body of a creature you've been riding, the caster can resurrect them.
+
 PRAYER_RETRIBUTION=<ABILITY>\
 Usage    : PRAY "RETRIBUTION"\n\r\
 Example  : pray retribution\n\r\
@@ -1717,7 +1734,7 @@ Usage    : PRAY "TRUE RESURRECTION" [TARGET NAME]\n\r\
 Example  : pray "true resurrection" bob\n\r\
 The caster summons the soul of the departed from the spirit realm and returns it to their \
 corpse, causing them to become resurrected.  The cleric need not pray over the corpse for \
-this magic to succeed.
+this magic to succeed, and the corpse need not be a player.
 
 INVISIBILITY_TO_UNDEAD=PRAYER_UNDEADINVISIBILITY
 PRAYER_UNDEADINVISIBILITY=<ABILITY>\
